Simplify RELRO_LDFLAGS
by adding it to AM_LDFLAGS instead of every linking rule and
by avoiding a forked grep.

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -125,9 +125,11 @@ libvirtd_CFLAGS = \
 	-DQEMUD_PID_FILE="\"$(QEMUD_PID_FILE)\""
 
 libvirtd_LDFLAGS =					\
+	$(RELRO_LDFLAGS)				\
 	$(PIE_LDFLAGS)					\
 	$(RELRO_LDFLAGS)				\
-	$(COVERAGE_LDFLAGS)
+	$(COVERAGE_LDFLAGS)				\
+	$(NULL)
 
 libvirtd_LDADD =					\
 	$(LIBXML_LIBS)					\
