libxl: Introduce libxl_domain.[ch]
Create libxl_domain.[ch] and move all functions operating on
libxlDomainObjPrivate to these files.  This will be useful for
future patches that e.g. add job support for libxlDomainObjPrivate.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -657,6 +657,7 @@ XENAPI_DRIVER_SOURCES =						\
 
 LIBXL_DRIVER_SOURCES =						\
 		libxl/libxl_conf.c libxl/libxl_conf.h		\
+		libxl/libxl_domain.c libxl/libxl_domain.h       \
 		libxl/libxl_driver.c libxl/libxl_driver.h
 
 UML_DRIVER_SOURCES =						\
