build: fix typo that broke 'make dist'
Bug introduced in commit 5c6ff42; 'make dist' fails:

make[3]: Entering directory `/home/eblake/libvirt-tmp/build3/examples/python'
make[3]: *** No rule to make target `topoology.py', needed by `distdir'.  Stop.
make[3]: Leaving directory `/home/eblake/libvirt-tmp/build3/examples/python'

* examples/python/Makefile.am (EXTRA_DIST): Spell topology right.

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/examples/python/Makefile.am
+++ b/examples/python/Makefile.am
@@ -17,5 +17,5 @@
 EXTRA_DIST=						\
 	README						\
 	consolecallback.py				\
-	topoology.py					\
+	topology.py					\
 	dominfo.py domrestore.py domsave.py domstart.py esxlist.py
